alinahmento de pastas

--- a/index.html
+++ b/index.html
@@ -1,143 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="assets/css/cards.css">
-<title>Listagem de Clientes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/cards.css">
+    <script src="./assets/scripts/cards.js" defer></script>
+    <title>Gerenciamento de Clientes</title>
 </head>
+
 <body>
 
-<div class="container">
-    <h1>Listagem de Clientes</h1>
-    <div class="cliente">
-        <p><strong>Nome:</strong> João Silva</p>
-        <p><strong>Nascimento:</strong> 01/01/1980</p>
-        <p><strong>Celular:</strong> (11) 99999-9999</p>
-        <p><strong>CEP:</strong> 12345-678</p>
+    <div class="container">
+        <h1>Listagem de Clientes</h1>
+        <div class="cliente">
+            <p><strong>Nome:</strong> João Silva</p>
+            <p><strong>Nascimento:</strong> 01/01/1980</p>
+            <p><strong>Celular:</strong> (11) 99999-9999</p>
+            <p><strong>CEP:</strong> 12345-678</p>
+        </div>
+        <div class="cliente">
+            <p><strong>Nome:</strong> Maria Souza</p>
+            <p><strong>Nascimento:</strong> 15/06/1975</p>
+            <p><strong>Celular:</strong> (11) 88888-8888</p>
+            <p><strong>CEP:</strong> 54321-987</p>
+        </div>
     </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <div class="cliente">
-        <p><strong>Nome:</strong> Maria Souza</p>
-        <p><strong>Nascimento:</strong> 15/06/1975</p>
-        <p><strong>Celular:</strong> (11) 88888-8888</p>
-        <p><strong>CEP:</strong> 54321-987</p>
-    </div>
-    <!-- Adicione mais clientes conforme necessário -->
-</div>
 
 </body>
+
 </html>
