--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="assets/css/cards.css">
-<title>Listagem de Clientes</title>
+<title>Gerenciamento de Clientes</title>
 </head>
 <body>
 
-<div class="container">
     <h1>Listagem de Clientes</h1>
+    
+<div class="container">
     <div class="cliente">
         <p><strong>Nome:</strong> João Silva</p>
         <p><strong>Nascimento:</strong> 01/01/1980</p>
